--- a/report/src/main/resources/application.properties
+++ b/report/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 
+spring.datasource.url=jdbc:sqlserver://192.168.137.1:1433;databaseName=ZH_report
+spring.datasource.username=sa
+spring.datasource.password=sqlserver
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+server.port=8081
+
+mybatis.mapper-locations=classpath:/com/zh/mapper/*.xml
