--- a/report/src/main/resources/application.properties
+++ b/report/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:sqlserver://192.168.137.1:1433;databaseName=ZH_report
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=ZH_report
 spring.datasource.username=sa
 spring.datasource.password=sqlserver
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
