--- a/report/src/main/resources/application.properties
+++ b/report/src/main/resources/application.properties
@@ -3,7 +3,6 @@ spring.datasource.url=jdbc:sqlserver://192.168.137.1:1433;databaseName=ZH_report
 spring.datasource.username=sa
 spring.datasource.password=sqlserver
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-
+mybatis.config-location=classpath:mybatis-config.xml
 server.port=8081
 
-mybatis.mapper-locations=classpath:/com/zh/mapper/*.xml
