--- a/report/src/main/resources/application.properties
+++ b/report/src/main/resources/application.properties
@@ -5,5 +5,6 @@ spring.datasource.password=sqlserver
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 server.port=8081
+spring.application.name=灵活报表系统
 
 mybatis.mapper-locations=classpath:/com/zh/mapper/*.xml
