--- a/report/src/main/resources/application.properties
+++ b/report/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 mybatis.config-location=classpath:mybatis-config.xml
 server.port=8081
 
+spring.application.name=灵活报表系统
+
+mybatis.mapper-locations=classpath:/com/zh/mapper/*.xml
