测试审核分页

--- a/report/src/main/resources/application.properties
+++ b/report/src/main/resources/application.properties
@@ -9,3 +9,9 @@ server.port=8081
 spring.application.name=灵活报表系统
 
 mybatis.mapper-locations=classpath:/com/zh/mapper/*.xml
+
+#pagehelper分页插件配置
+pagehelper.helperDialect=sqlserver
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
