--- a/report/src/main/resources/application.properties
+++ b/report/src/main/resources/application.properties
@@ -15,3 +15,4 @@ pagehelper.helperDialect=sqlserver
 pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 pagehelper.params=count=countSql
+pagehelper.page-size-zero=true
